objects/Venue__c.object
<CustomObject>
    <description>Created as part of the Events Management Project</description>
    <fields>
        <fullName>Accommodations__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>IF(
RecordType.Name = &quot;Accommodations&quot; || RecordType.Name = &quot;Event Venue and Accommodations&quot;,
true,
false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accommodations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Rooms__c</fullName>
        <description>Created as part of the Events Management project</description>
        <inlineHelpText>Rooms added to contract</inlineHelpText>
        <label>Additional Rooms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory_Event__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Advisory Event</label>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipName>Venues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Block_Checked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of Event Management.</description>
        <label>Block Checked By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Event_Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block_Last_Checked__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Block Last Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cutoff_Date__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Begins__c</fullName>
        <formula>Advisory_Event__r.Date_Begins__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sold_Out__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Date Sold Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Space_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Space Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Meeting Room</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.Venue__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Event_Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>IF( 
RecordType.Name = &quot;Event Venue&quot; || RecordType.Name = &quot;Event Venue and Accommodations&quot;, 
true, 
false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Pickup_Day_1__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Final Pickup - Day 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Pickup_Day_2__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Final Pickup - Day 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Pickup_Day_3__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Final Pickup - Day 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Pickup_Total__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>Final_Pickup_Day_1__c +
 Final_Pickup_Day_2__c +
 Final_Pickup_Day_3__c +
 Final_Pickup_Day_4__c +
 Final_Pickup_Day_5__c +
 Final_Shoulder_Pickup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Pickup – Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Shoulder_Pickup__c</fullName>
        <description>Created as part of the Events Management project</description>
        <inlineHelpText>Accumulative</inlineHelpText>
        <label>Final Shoulder Pickup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Breakfast_Day_1__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Guarantee Breakfast - Day 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Breakfast_Day_2__c</fullName>
        <label>Guarantee Breakfast - Day 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Breakfast_Day_3__c</fullName>
        <label>Guarantee Breakfast - Day 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Dinner_Day_1__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Guarantee Dinner - Day 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Dinner_Day_2__c</fullName>
        <label>Guarantee Dinner - Day 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Dinner_Day_3__c</fullName>
        <label>Guarantee Dinner - Day 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Lunch_Day_1__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Guarantee Lunch - Day 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Lunch_Day_2__c</fullName>
        <label>Guarantee Lunch - Day 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Lunch_Day_3__c</fullName>
        <label>Guarantee Lunch - Day 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Reception_Day_1__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Guarantee Reception - Day 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Reception_Day_2__c</fullName>
        <label>Guarantee Reception - Day 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Reception_Day_3__c</fullName>
        <label>Guarantee Reception - Day 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Received__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Invoice Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Payment__c</fullName>
        <description>Created as part of Event Management.</description>
        <label>Latest Payment</label>
        <summarizedField>Venue_Payment__c.Date_Paid__c</summarizedField>
        <summaryForeignKey>Venue_Payment__c.Event_Venue__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payments_Made__c</fullName>
        <description>Created as part of Event Management.</description>
        <label>Payments Made</label>
        <summarizedField>Venue_Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Venue_Payment__c.Event_Venue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Picked_up_at_1_Month_Out__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Picked up at 1 Month Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picked_up_at_1_Week_Out__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Picked up at 1 Week Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picked_up_at_2_Weeks_Out__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Picked up at 2 Weeks Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picked_up_at_Cutoff__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Picked up at Cutoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only a single Event Venue may be marked as Primary</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Released__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label># Released</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Block_Comments__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Room Block Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Room_Block_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of the Events Management project</description>
        <label>Room Block Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room_Block_Tracking_1_Month_Out__c</fullName>
        <description>Created for CR-20151209-9450</description>
        <label>Room Block Tracking 1 Month Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Block_Tracking_1_Week_Out__c</fullName>
        <description>Created for CR-20151209-9450.</description>
        <label>Room Block Tracking 1 Week Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Block_Tracking_2_Weeks_Out__c</fullName>
        <description>Created for CR-20151209-9450</description>
        <label>Room Block Tracking 2 Weeks Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Block_Tracking_at_Cutoff__c</fullName>
        <description>Created for CR-20151209-9450.</description>
        <label>Room Block Tracking at Cutoff</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Contracted_Day_1__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Room Contracted - Day 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Contracted_Day_2__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Room Contracted - Day 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Contracted_Day_3__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Room Contracted - Day 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Contracted_Total__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>Room_Contracted_Day_1__c +
Room_Contracted_Day_2__c +
Room_Contracted_Day_3__c +
Room_Contracted_Day_4__c +
Room_Contracted_Day_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room Contracted - Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Rate__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Room Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Room_Use__c</fullName>
        <label>Room Use</label>
        <picklist>
            <picklistValues>
                <fullName>General Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakout 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakout 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakout 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakout 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakout 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Rate__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Staff Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Details__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Venue Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2 AND 3) OR (4 AND 5 AND 6) OR (7 AND 8 AND 9 AND 10))</booleanFilter>
            <errorMessage>The Institution record you&apos;re searching for may not be populating because its “Type” is incorrect for this Record Type and/or it is not indicated as “Event Venue” and/or “Accommodations.”</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Accommodations</value>
            </filterItems>
            <filterItems>
                <field>Account.Accommodations__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Conference Center, Convention Center, Hotel</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event Venue</value>
            </filterItems>
            <filterItems>
                <field>Account.Event_Venue__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>ABC Office, Conference Center, Convention Center, Corporation, Hotel, Member Location, Restaurant</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event Venue and Accommodations</value>
            </filterItems>
            <filterItems>
                <field>Account.Event_Venue__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Accommodations__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Conference Center, Convention Center, Corporation, Hotel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Venues and Vendors (Venue)</relationshipLabel>
        <relationshipName>Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Venues and Vendors</label>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues and Vendors</pluralLabel>
    <recordTypes>
        <fullName>Accommodations</fullName>
        <active>true</active>
        <description>Location of the hotel accomodations</description>
        <label>Accommodations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Venue</fullName>
        <active>true</active>
        <description>Location of the Event</description>
        <label>Event Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Venue_and_Accommodations</fullName>
        <active>true</active>
        <description>Location of the event and accomodations</description>
        <label>Event Venue and Accommodations</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Venue_is_Required</fullName>
        <active>true</active>
        <description>If Venue is blank this will trigger</description>
        <errorConditionFormula>ISBLANK(Venue__c)</errorConditionFormula>
        <errorDisplayField>Venue__c</errorDisplayField>
        <errorMessage>You must select a Venue</errorMessage>
    </validationRules>
</CustomObject>